@@ -1,3 +1,8 @@
+2004-07-21  Phil Blundell  <pb@nexus.co.uk>
+
+	* Makefile.am (Xneomagic_LDADD): Include -lts if appropriate.
+	Patch from pattieja@bentham.ispvip.biz.
+
 2004-06-07 Franco Catrin L. <fcatrin@tuxpan.com>
         * Small fix for depth calculation
 
